--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-grid-carousel": "^1.0.1",
     "react-hook-form": "^7.18.0",
     "react-icons": "^4.3.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
